tests/test_enum/bad/quick_pattern_3.catala_en
## Article

```catala
declaration enumeration E:
-- Case1
-- Case2

declaration enumeration F:
-- Case3
-- Case4

declaration scope A:
context x content E
context y content boolean

scope A:
definition x equals Case1
definition y equals x with pattern Case3
```
